# ChangeLog for sys-apps/dog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dog/ChangeLog,v 1.29 2009/05/31 18:18:19 ranger Exp $

  31 May 2009; Brent Baude <ranger@gentoo.org> dog-1.7-r3.ebuild:
  stable ppc64, bug 269496

  31 May 2009; nixnut <nixnut@gentoo.org> dog-1.7-r3.ebuild:
  ppc stable #269496

  24 May 2009; Markus Meier <maekke@gentoo.org> dog-1.7-r3.ebuild:
  amd64 stable, bug #269496

  22 May 2009; Ferris McCormick <fmccor@gentoo.org> dog-1.7-r3.ebuild:
  Sparc stable, Bug #269496.

  22 May 2009; Christian Faulhammer <fauli@gentoo.org> dog-1.7-r3.ebuild:
  stable x86, bug 269496

*dog-1.7-r3 (10 Apr 2009)

  10 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  +files/dog-1.7-strfry.patch, +dog-1.7-r3.ebuild:
  Fix strfry issue if len = 0. bug 251675, patch by bob5972

  04 Feb 2008; Fabian Groffen <grobian@gentoo.org> dog-1.7-r1.ebuild,
  dog-1.7-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  24 Feb 2007; Ryan Hill <dirtyepic@gentoo.org> ChangeLog:
  Regen for Manifest2 - Bug #165195

  04 Feb 2007; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
  Removed ka0ttic from metadata.

  19 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> dog-1.7-r2.ebuild:
  Stable on ppc.

  10 Aug 2005; Ciaran McCreesh <ciaranm@gentoo.org> dog-1.7-r1.ebuild,
  dog-1.7-r2.ebuild:
  Fix sed to work if the compiler path includes slashes, bug #102025

  10 Aug 2005; Luis Medinas <metalgod@gentoo.org> dog-1.7-r2.ebuild:
  Marked Stable on AMD64.

  28 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> dog-1.7-r2.ebuild:
  Added ~mips.

  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> dog-1.7-r2.ebuild:
  Stable on alpha.

  07 Jul 2005; Markus Rothe <corsair@gentoo.org> dog-1.7-r2.ebuild:
  Stable on ppc64

  28 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> dog-1.7-r2.ebuild:
  Stable on sparc

  28 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> -dog-1.7.ebuild,
  dog-1.7-r2.ebuild: