@@ -4,6 +4,6 @@ AUX dog-1.7-check-ctime.diff 1409 RMD160 938cafcd301ba8e198a6fdd3b00f1fdefbaa7c7
 AUX dog-1.7-strfry.patch 288 RMD160 863b6d5a25d7c24826a6bef29bfa70d110d55dd7 SHA1 506de0c036cb41b9f54bae1036fff99f2d0dbfe8 SHA256 553a5a1a3078dc79ae65ff313e8a8dce66843510f004048a0d0b7f6ed1d5552d
 DIST dog-1.7.tar.gz 30433 RMD160 dd8867a5a8ff7208b92df8bc23a9b6b48cc74816 SHA1 a1af9c76daa0c9768cdf0c31839b3004e6ccc417 SHA256 6c5386d1b6401d6410baa8f0da343de5625cd3d59b6273dcee81997c372522ca
 EBUILD dog-1.7-r2.ebuild 808 RMD160 ae9222a8efde2e182600fbc85d64def03ecd3119 SHA1 61f94bf58803c1fa55fd5ee79f247085e848a975 SHA256 fa823942e7f1f92cb7cb009e028c33485a0db160285d10f8e9b751953cc303ac
-EBUILD dog-1.7-r3.ebuild 990 RMD160 88de32518113a0f872f4b7f456e64997dda4fb6a SHA1 d44941d97358ad2fce97ba0de97218f128c4b109 SHA256 dd6e6936aab0bc92b51f5a95ee38ded944edb9400eed1752860641f79246bb48
-MISC ChangeLog 3465 RMD160 436deaf27221760c7c677231540e4828ca949477 SHA1 729f26f7fbdb8fd7b51417a417c4db9a1bbaa49b SHA256 e4300ec6989b32d5845b7e3b9ec25c649bb2860c51624d00ee1c54ab961f5ba3
+EBUILD dog-1.7-r3.ebuild 1030 RMD160 97ff608a08a05667c1047ea25f5b38a629b7ee73 SHA1 0b006045088836ed80e0b71658b0c597a9d6aade SHA256 07fa556ea88da093b6c36fc4301f83d3d78abed4aadc0c9b9abb0a7923c9952a
+MISC ChangeLog 3706 RMD160 ca8f9ccbed9db72664b428c4719bcfb7286eac0a SHA1 8c65322d216eeedb3f5d4cd1fddc399d7b02ac0d SHA256 a3d17001c09a1df9b64b5f7629394838577817972103d5b049171b1f19b588b2
 MISC metadata.xml 234 RMD160 45a2ea12c9260edd2873e388e0c557b22b0340bf SHA1 5cb1e736d47030a98681b5b611f456dad51f9366 SHA256 1378728b80203e0b5e3fe90c0aef9a1cb191585d99a3e761a8817d4209e5cf72
