@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/dog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dog/ChangeLog,v 1.29 2009/05/31 18:18:19 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dog/ChangeLog,v 1.31 2009/06/04 19:44:13 klausman Exp $
+
+  04 Jun 2009; Tobias Klausmann <klausman@gentoo.org> dog-1.7-r3.ebuild:
+  Stable on alpha, bug #269496
+
+  03 Jun 2009; Jeremy Olexa <darkside@gentoo.org> dog-1.7-r3.ebuild:
+  Update HOMEPAGE and SRC_URI, upstream disappeared, bug 270835
 
   31 May 2009; Brent Baude <ranger@gentoo.org> dog-1.7-r3.ebuild:
   stable ppc64, bug 269496
